--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{{ if not .IsHome }}{{ .Title }} - {{ end }}{{ .Site.Title }}</title>
-    <link href="/_srcf/vendor/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/_srcf/vendor/css/font-awesome.min.css" rel="stylesheet">
-    <link href="/_srcf/srcf-bs.css" rel="stylesheet">
+    <link href="https://www.srcf.net/_srcf/vendor/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://www.srcf.net/_srcf/vendor/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://www.srcf.net/_srcf/srcf-bs.css" rel="stylesheet">
     <link href="{{ .Site.BaseURL }}blog.css" rel="stylesheet">
   </head>
   <body>
