Add poorly designed licensing footer.

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,2 +1,5 @@
+<main class="container footer">
+  All content is licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>.
+</main>
 </body>
 </html>
