Sync header/footer HTML with current styles

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
-<section class="container footer">
-  All content is licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>.
-</section>
+<footer class="footer mt-auto pt-3">
+  <p class="text-center text-muted">All content is licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>.</p>
+</footer>
 </body>
 </html>
